# agentflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: Dockerfile  requirements.txt
api/app/: main.py  settings.py
api/app/clients/: inference_client.py
api/app/db/: database.py  repository.py
api/app/graph/: analyze_graph.py  decision_graph.py
api/app/graph/nodes/: analyze_cover_letter.py  analyze_interview.py  analyze_resume.py  analyze_scorecard.py  classify_document.py  extract_inputs.py  risk_flags.py  score_alignment.py  write_memo.py
api/app/graph/tools/: analytics_tool.py  database_tool.py  notification_tool.py
api/app/parsers/: document_parser.py
api/app/runner/: agent_runner.py  analyze_runner.py
api/app/schemas/: agent.py  analyze.py  decision.py  session.py
api/app/schemas/tools/: analytics.py  database.py  notification.py
tests/: conftest.py  test_agent_contract.py  test_analyze.py  test_schemas.py  test_sessions.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx
ui/src/components/: Header.jsx  ResultCard.jsx  UploadZone.jsx
ui/src/pages/: About.jsx
