[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentflow"
version = "0.1.0"
description = "Decision Intelligence Business Assistant powered by LangGraph and Groq"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --tb=short"
markers = [
    "unit: fast tests with no I/O or network calls",
    "integration: requires live services (LLM, DB)",
]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# ---------------------------------------------------------------------------
# coverage  (run with: pytest --cov=api --cov-report=term-missing)
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["api"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
